# AnchorForge

./: .env.example  .geminiignore  .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  DISCLAIMER.md  LICENSE  README.md  Remarks-bsv-sdk.txt  af_TODO.py  af_anchor.py  af_download_file.py  af_drain_bank.py  af_fill_bank.py  af_header_tool.py  af_log_analyzer.py  af_monitor.py  af_setup_fresh_environment.py  af_status.py  af_sync.py  af_utxo_manager.py  af_verify.py  pyproject.toml  requirements.txt
AnchorForge/: af_verifier.py  audit_core.py  bank_functions.py  block_manager.py  blockchain_api.py  blockchain_service.py  config.py  control_process.py  data_services.py  key_x509_manager.py  main.py  main_audit.py  main_audit_log_event.py  main_audit_monitor.py  main_batch_coingecko.py  main_batch_iss.py  main_sync_headers.py  main_wallet_setup.py  requirements.txt  utils.py  utxo_manager.py  wallet_manager.py
Legacy/: main.py
anchorforge/: __init__.py  af_core_defs.py  af_publisher.py  audit_log_analyzer.py  bank_functions.py  block_manager.py  blockchain_api.py  blockchain_service.py  config.py  control_process.py  core_defs.py  data_services.py  enrich_and_correct_log_with_tsc_proofs.py  enrich_log_with_data_mode.py  key_manager.py  key_x509_manager.py  main_batch_coingecko.py  main_batch_iss.py  main_wallet_setup.py  manager.py  publisher.py  sweep_bank.py  transfer.py  utils.py  utxo_manager.py  verifier.py  wallet_manager.py
anchorforge/status/: __init__.py  context.py  models.py  readers.py  resolvers.py
devtools/: lib_error_bsv_chunks.py
docs/: TODO  architecture.md  cli_manual.md  cli_manual_1.md  cli_manual_2.md  examples.md  history.md  issues.md  known_issues.md  protocol_standard_v02.md  quickstart.md  security_and_privacy.md
docs/cli/: af_status_cli_guide.md  af_status_examples.md
docs/specs/: af_status_architecture.md  af_status_spec.md
docs/standards/: behavioral_invariants.md
docs/todo/: af_status_followups.md  ideas_future.md  technical_debt.md
examples/: main_batch_coingecko.py  main_batch_iss.py
genesis_artifacts/genesis_artifacts_v02/: 01_genesis_v02_concept.md  01_record_explanation.md  02_t2_explanation.md  02_t2_record_decoder.md  3c.tx  T0.txt  address_v02.md  blockheader_t1_maximal.json  commands.txt  presentation.txt  x3_t3.md
local_config/: .env.template  dot_env_template
prompts/: README.md
prompts/codegen/: af_status_codegen.md  (+9 more)
tests/: conftest.py  test_af_status.py  test_behavioral_invariants.py  test_core_defs.py  test_op_return_debug.py  test_publisher.py  test_utils.py
tools/: migrate_data.py
vai/: audit_core.py  bank_functions.py  block_manager.py  blockchain_api.py  blockchain_service.py  config.py  key_manager.py  main.py  main_audit.py  main_audit_log_event.py  main_audit_monitor.py  main_sync_headers.py  main_wallet_setup.py  test_op_return_debug.py  utils.py  wallet_manager.py
(+27 files in other folders)
