[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorforge"
version = "0.2.0-beta"
description = "AnchorForge – BSV timestamping and verification framework"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Wolfgang Lohmann" }
]

license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "cryptography>=45.0.6",
  "aiohttp==3.12.12",
  "httpx>=0.27.0",
  "portalocker>=2.8.2",
  "base58>=2.1.1",
  "python-dotenv==1.1.1",
  "bsv-sdk==1.0.8, <=1.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "black>=24.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
af-anchor = "af_anchor:main_entry"
af-verify = "af_verify:main_entry"
af-sync = "af_sync:main_entry"
af-monitor = "af_monitor:main_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["anchorforge*", "af_*"]

[tool.setuptools.exclude-package-data]
anchorforge = ["__pycache__/*"]

# ------------------------------------------------------------
# Tooling configuration (optional but recommended)
# ------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
